@@ -7,11 +7,12 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.test.util.ReflectionTestUtils;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
@@ -24,6 +25,7 @@ import uk.gov.hmcts.reform.civil.ga.handler.GeneralApplicationBaseCallbackHandle
 import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.Document;
@@ -68,71 +70,66 @@ import static uk.gov.hmcts.reform.civil.ga.enums.welshenhancements.PreTranslatio
 import static uk.gov.hmcts.reform.civil.ga.enums.welshenhancements.PreTranslationGaDocumentType.WRITTEN_REPRESENTATION_ORDER_DOC;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(classes = {
-    GeneratePDFDocumentCallbackHandler.class,
-    JacksonAutoConfiguration.class,
-    CaseDetailsConverter.class,
-    AssignCategoryId.class},
-    properties = {"print.service.enabled=true"})
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @MockBean
+    @Mock
     private Time time;
 
-    @MockBean
+    @Mock
     private GeneralOrderGenerator generalOrderGenerator;
 
-    @MockBean
+    @Mock
     private ConsentOrderGenerator consentOrderGenerator;
 
-    @MockBean
+    @Mock
     private RequestForInformationGenerator requestForInformationGenerator;
 
-    @MockBean
+    @Mock
     private DirectionOrderGenerator directionOrderGenerator;
 
-    @MockBean
+    @Mock
     private DismissalOrderGenerator dismissalOrderGenerator;
 
-    @MockBean
+    @Mock
     private HearingOrderGenerator hearingOrderGenerator;
 
-    @MockBean
+    @Mock
     private CaseDetailsConverter caseDetailsConverter;
 
-    @MockBean
+    @Mock
     private CoreCaseDataService coreCaseDataService;
 
-    @MockBean
+    @Mock
     private WrittenRepresentationConcurrentOrderGenerator writtenRepresentationConcurrentOrderGenerator;
 
-    @MockBean
+    @Mock
     private WrittenRepresentationSequentialOrderGenerator writtenRepresentationSequentailOrderGenerator;
 
-    @MockBean
+    @Mock
     private FreeFormOrderGenerator freeFormOrderGenerator;
 
-    @MockBean
+    @Mock
     private AssistedOrderFormGenerator assistedOrderFormGenerator;
 
-    @Autowired
-    private AssignCategoryId assignCategoryId;
+    @Spy
+    private AssignCategoryId assignCategoryId = new AssignCategoryId();
 
-    @MockBean
+    @Mock
     private FeatureToggleService featureToggleService;
 
-    @MockBean
+    @Mock
     private GaForLipService gaForLipService;
 
-    @MockBean
+    @Mock
     private SendFinalOrderPrintService sendFinalOrderPrintService;
 
-    @Autowired
+    @InjectMocks
     private GeneratePDFDocumentCallbackHandler handler;
 
-    @Autowired
-    private final ObjectMapper mapper = new ObjectMapper();
+    @Spy
+    private ObjectMapper mapper = ObjectMapperFactory.instance();
 
     private final LocalDate submittedOn = now();
 
@@ -205,7 +202,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getGeneralOrderDocument().get(0).getValue())
+            assertThat(updatedData.getGeneralOrderDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -242,7 +239,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getDirectionOrderDocument().get(0).getValue())
+            assertThat(updatedData.getDirectionOrderDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.DIRECTION_ORDER_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -271,10 +268,10 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldHaveListOfTwoGenerateDirectionOrderDocIfElementInListAlreadyPresent() {
 
-            CaseDocument caseDocument = CaseDocument.builder().documentName("abcd")
-                .documentLink(Document.builder().documentUrl("url").documentFileName("filename").documentHash("hash")
-                                  .documentBinaryUrl("binaryUrl").build())
-                .documentType(DocumentType.DIRECTION_ORDER).documentSize(12L).build();
+            CaseDocument caseDocument = new CaseDocument().setDocumentName("abcd")
+                .setDocumentLink(new Document().setDocumentUrl("url").setDocumentFileName("filename").setDocumentHash("hash")
+                                  .setDocumentBinaryUrl("binaryUrl"))
+                .setDocumentType(DocumentType.DIRECTION_ORDER).setDocumentSize(12L);
 
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().directionOrderApplication()
                 .directionOrderDocument(wrapElements(caseDocument))
@@ -303,7 +300,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getDismissalOrderDocument().get(0).getValue())
+            assertThat(updatedData.getDismissalOrderDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.DISMISSAL_ORDER_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -352,8 +349,8 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldGenerateMadeDecisionFinalOrderDocument_whenAboutToSubmitEventIsCalled() {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().finalOrderFreeForm()
-                .judicialDecision(GAJudicialDecision.builder()
-                                      .decision(GAJudgeDecisionOption.FREE_FORM_ORDER).build()).build();
+                .judicialDecision(new GAJudicialDecision()
+                                      .setDecision(GAJudgeDecisionOption.FREE_FORM_ORDER)).build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -362,7 +359,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getGeneralOrderDocument().get(0).getValue())
+            assertThat(updatedData.getGeneralOrderDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -370,8 +367,8 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldPrintGenerateFreeFormOrderDocument() {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().finalOrderFreeForm()
-                .judicialDecision(GAJudicialDecision.builder()
-                                      .decision(GAJudgeDecisionOption.FREE_FORM_ORDER).build())
+                .judicialDecision(new GAJudicialDecision()
+                                      .setDecision(GAJudgeDecisionOption.FREE_FORM_ORDER))
                 .isGaApplicantLip(YesOrNo.YES)
                 .applicationIsUncloakedOnce(YesOrNo.YES)
                 .isGaRespondentOneLip(YesOrNo.YES)
@@ -403,7 +400,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getHearingOrderDocument().get(0).getValue())
+            assertThat(updatedData.getHearingOrderDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.HEARING_ORDER_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -424,7 +421,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.HEARING_ORDER_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType()).isEqualTo(PreTranslationGaDocumentType.HEARING_ORDER_DOC);
         }
@@ -487,7 +484,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getWrittenRepSequentialDocument().get(0).getValue())
+            assertThat(updatedData.getWrittenRepSequentialDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.WRITTEN_REPRESENTATION_SEQUENTIAL_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -495,10 +492,10 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldHaveListOfTwoGenerateWrittenRepSequentialDocIfElementInListAlreadyPresent() {
 
-            CaseDocument caseDocument = CaseDocument.builder().documentName("abcd")
-                .documentLink(Document.builder().documentUrl("url").documentFileName("filename").documentHash("hash")
-                                  .documentBinaryUrl("binaryUrl").build())
-                .documentType(DocumentType.WRITTEN_REPRESENTATION_SEQUENTIAL).documentSize(12L).build();
+            CaseDocument caseDocument = new CaseDocument().setDocumentName("abcd")
+                .setDocumentLink(new Document().setDocumentUrl("url").setDocumentFileName("filename").setDocumentHash("hash")
+                                  .setDocumentBinaryUrl("binaryUrl"))
+                .setDocumentType(DocumentType.WRITTEN_REPRESENTATION_SEQUENTIAL).setDocumentSize(12L);
 
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().writtenRepresentationSequentialApplication()
                 .writtenRepSequentialDocument(wrapElements(caseDocument))
@@ -551,7 +548,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getWrittenRepConcurrentDocument().get(0).getValue())
+            assertThat(updatedData.getWrittenRepConcurrentDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.WRITTEN_REPRESENTATION_CONCURRENT_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -559,10 +556,10 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldHaveListOfTwoGenerateWrittenRepConcurrentDocIfElementInListAlreadyPresent() {
 
-            CaseDocument caseDocument = CaseDocument.builder().documentName("abcd")
-                .documentLink(Document.builder().documentUrl("url").documentFileName("filename").documentHash("hash")
-                                  .documentBinaryUrl("binaryUrl").build())
-                .documentType(DocumentType.WRITTEN_REPRESENTATION_CONCURRENT).documentSize(12L).build();
+            CaseDocument caseDocument = new CaseDocument().setDocumentName("abcd")
+                .setDocumentLink(new Document().setDocumentUrl("url").setDocumentFileName("filename").setDocumentHash("hash")
+                                  .setDocumentBinaryUrl("binaryUrl"))
+                .setDocumentType(DocumentType.WRITTEN_REPRESENTATION_CONCURRENT).setDocumentSize(12L);
 
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().writtenRepresentationConcurrentApplication()
                 .writtenRepConcurrentDocument(wrapElements(caseDocument))
@@ -617,7 +614,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getRequestForInformationDocument().get(0).getValue())
+            assertThat(updatedData.getRequestForInformationDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.REQUEST_FOR_INFORMATION_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -625,10 +622,10 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldPrintGenerateSendAppToOtherPartyLip() {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().requestForInformationApplication()
-                .judicialDecisionRequestMoreInfo(GAJudicialRequestMoreInfo.builder()
-                                                     .judgeRecitalText("test")
-                                                     .requestMoreInfoOption(SEND_APP_TO_OTHER_PARTY)
-                                                     .judgeRequestMoreInfoByDate(now()).build())
+                .judicialDecisionRequestMoreInfo(new GAJudicialRequestMoreInfo()
+                                                     .setJudgeRecitalText("test")
+                                                     .setRequestMoreInfoOption(SEND_APP_TO_OTHER_PARTY)
+                                                     .setJudgeRequestMoreInfoByDate(now()))
                 .isGaApplicantLip(YesOrNo.YES)
                 .applicationIsUncloakedOnce(YesOrNo.YES)
                 .isGaRespondentOneLip(YesOrNo.YES)
@@ -652,10 +649,10 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldGenerateSendAppToOtherParty_whenAboutToSubmitEventIsCalled() {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().requestForInformationApplication()
-                .judicialDecisionRequestMoreInfo(GAJudicialRequestMoreInfo.builder()
-                                                     .judgeRecitalText("test")
-                                                     .requestMoreInfoOption(SEND_APP_TO_OTHER_PARTY)
-                                                     .judgeRequestMoreInfoByDate(now()).build())
+                .judicialDecisionRequestMoreInfo(new GAJudicialRequestMoreInfo()
+                                                     .setJudgeRecitalText("test")
+                                                     .setRequestMoreInfoOption(SEND_APP_TO_OTHER_PARTY)
+                                                     .setJudgeRequestMoreInfoByDate(now()))
                 .build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             when(gaForLipService.isLipApp(any(GeneralApplicationCaseData.class))).thenReturn(true);
@@ -666,7 +663,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getRequestForInformationDocument().get(0).getValue())
+            assertThat(updatedData.getRequestForInformationDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.REQUEST_FOR_INFORMATION_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -674,10 +671,10 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         @Test
         void shouldHaveListOfTwoGenerateRequestForInfotDocIfElementInListAlreadyPresent() {
 
-            CaseDocument caseDocument = CaseDocument.builder().documentName("abcd")
-                .documentLink(Document.builder().documentUrl("url").documentFileName("filename").documentHash("hash")
-                                  .documentBinaryUrl("binaryUrl").build())
-                .documentType(DocumentType.REQUEST_FOR_INFORMATION).documentSize(12L).build();
+            CaseDocument caseDocument = new CaseDocument().setDocumentName("abcd")
+                .setDocumentLink(new Document().setDocumentUrl("url").setDocumentFileName("filename").setDocumentHash("hash")
+                                  .setDocumentBinaryUrl("binaryUrl"))
+                .setDocumentType(DocumentType.REQUEST_FOR_INFORMATION).setDocumentSize(12L);
 
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().requestForInformationApplication()
                 .requestForInformationDocument(wrapElements(caseDocument))
@@ -701,7 +698,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
                 GaFinalOrderSelection selection) {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
                     .build()
-                    .toBuilder()
+                    .copy()
                     .finalOrderSelection(selection)
                     .build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
@@ -710,7 +707,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getGeneralOrderDocument().get(0).getValue())
+            assertThat(updatedData.getGeneralOrderDocument().getFirst().getValue())
                     .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
         }
@@ -720,15 +717,15 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         void shouldHaveListOfTwoGeneralOrderDocumentIfElementInListAlreadyPresent_withFinalOrder(
                 GaFinalOrderSelection selection) {
 
-            CaseDocument caseDocument = CaseDocument.builder().documentName("abcd")
-                    .documentLink(Document.builder().documentUrl("url")
-                            .documentFileName("filename").documentHash("hash")
-                            .documentBinaryUrl("binaryUrl").build())
-                    .documentType(DocumentType.GENERAL_ORDER).documentSize(12L).build();
+            CaseDocument caseDocument = new CaseDocument().setDocumentName("abcd")
+                    .setDocumentLink(new Document().setDocumentUrl("url")
+                            .setDocumentFileName("filename").setDocumentHash("hash")
+                            .setDocumentBinaryUrl("binaryUrl"))
+                    .setDocumentType(DocumentType.GENERAL_ORDER).setDocumentSize(12L);
 
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
                     .build()
-                    .toBuilder()
+                    .copy()
                     .finalOrderSelection(selection)
                     .generalOrderDocument(wrapElements(caseDocument))
                     .build();
@@ -748,7 +745,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
             GaFinalOrderSelection selection) {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
                 .build()
-                .toBuilder()
+                .copy()
                 .finalOrderSelection(selection)
                 .isGaApplicantLip(YesOrNo.YES)
                 .applicantBilingualLanguagePreference(YesOrNo.YES)
@@ -762,7 +759,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
             verifyNoInteractions(sendFinalOrderPrintService);
@@ -780,7 +777,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getConsentOrderDocument().get(0).getValue())
+            assertThat(updatedData.getConsentOrderDocument().getFirst().getValue())
                 .isEqualTo(PDFBuilder.CONSENT_ORDER_DOCUMENT);
 
         }
@@ -800,7 +797,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.WRITTEN_REPRESENTATION_CONCURRENT_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(WRITTEN_REPRESENTATION_ORDER_DOC);
@@ -821,7 +818,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.WRITTEN_REPRESENTATION_SEQUENTIAL_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(WRITTEN_REPRESENTATION_ORDER_DOC);
@@ -842,7 +839,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.WRITTEN_REPRESENTATION_SEQUENTIAL_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(WRITTEN_REPRESENTATION_ORDER_DOC);
@@ -865,7 +862,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.DIRECTION_ORDER_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(DIRECTIONS_ORDER_DOC);
@@ -888,7 +885,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.DIRECTION_ORDER_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(DIRECTIONS_ORDER_DOC);
@@ -930,7 +927,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.WRITTEN_REPRESENTATION_CONCURRENT_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(WRITTEN_REPRESENTATION_ORDER_DOC);
@@ -992,7 +989,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(GENERAL_ORDER_DOC);
@@ -1004,8 +1001,8 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
                 .isGaApplicantLip(YesOrNo.YES)
                 .isGaRespondentOneLip(YesOrNo.YES)
                 .applicantBilingualLanguagePreference(YesOrNo.YES)
-                .judicialDecision(GAJudicialDecision.builder()
-                                      .decision(GAJudgeDecisionOption.FREE_FORM_ORDER).build()).build();
+                .judicialDecision(new GAJudicialDecision()
+                                      .setDecision(GAJudgeDecisionOption.FREE_FORM_ORDER)).build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -1014,7 +1011,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(GENERAL_ORDER_DOC);
@@ -1026,8 +1023,8 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
                 .isGaApplicantLip(YesOrNo.YES)
                 .isGaRespondentOneLip(YesOrNo.YES)
                 .respondentBilingualLanguagePreference(YesOrNo.YES)
-                .judicialDecision(GAJudicialDecision.builder()
-                                      .decision(GAJudgeDecisionOption.FREE_FORM_ORDER).build()).build();
+                .judicialDecision(new GAJudicialDecision()
+                                      .setDecision(GAJudgeDecisionOption.FREE_FORM_ORDER)).build();
             when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
@@ -1037,7 +1034,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(GENERAL_ORDER_DOC);
@@ -1049,8 +1046,8 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
                 .isGaApplicantLip(YesOrNo.YES)
                 .isGaRespondentOneLip(YesOrNo.YES)
                 .respondentBilingualLanguagePreference(YesOrNo.NO)
-                .judicialDecision(GAJudicialDecision.builder()
-                                      .decision(GAJudgeDecisionOption.FREE_FORM_ORDER).build()).build();
+                .judicialDecision(new GAJudicialDecision()
+                                      .setDecision(GAJudgeDecisionOption.FREE_FORM_ORDER)).build();
             when(featureToggleService.isGaForWelshEnabled()).thenReturn(false);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
@@ -1082,7 +1079,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-            assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+            assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
                 .isEqualTo(PDFBuilder.GENERAL_ORDER_DOCUMENT);
             assertThat(updatedData.getPreTranslationGaDocumentType())
                 .isEqualTo(GENERAL_ORDER_DOC);
@@ -1114,16 +1111,16 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         void shouldGenerateGeneralOrderDocument_whenAboutToSubmitEventIsCalledForWelshLipButDontHideIt() {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder()
                 .requestForInformationApplication()
-                .judicialDecisionRequestMoreInfo(GAJudicialRequestMoreInfo.builder().requestMoreInfoOption(
-                GAJudgeRequestMoreInfoOption.SEND_APP_TO_OTHER_PARTY).build())
+                .judicialDecisionRequestMoreInfo(new GAJudicialRequestMoreInfo().setRequestMoreInfoOption(
+                GAJudgeRequestMoreInfoOption.SEND_APP_TO_OTHER_PARTY))
                 .isGaApplicantLip(YES)
                 .isGaRespondentOneLip(YES)
                 .applicantBilingualLanguagePreference(YES)
                 .parentClaimantIsApplicant(YES)
                 .build();
-            caseData = caseData.toBuilder().judicialDecision(GAJudicialDecision.builder()
-                                                     .decision(GAJudgeDecisionOption.REQUEST_MORE_INFO)
-                                                     .build()).build();
+            caseData = caseData.copy().judicialDecision(new GAJudicialDecision()
+                                                     .setDecision(GAJudgeDecisionOption.REQUEST_MORE_INFO)
+                                                     ).build();
             when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
@@ -1142,17 +1139,17 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
         void shouldGenerateGeneralOrderDocument_whenAboutToSubmitEventIsCalledForWelshLipButHideIt() {
             GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder()
                 .requestForInformationApplication()
-                .judicialDecisionRequestMoreInfo(GAJudicialRequestMoreInfo.builder().requestMoreInfoOption(
-                    GAJudgeRequestMoreInfoOption.REQUEST_MORE_INFORMATION).judgeRequestMoreInfoByDate(LocalDate.now().minusDays(1))
-                .judgeRequestMoreInfoText("test").build())
+                .judicialDecisionRequestMoreInfo(new GAJudicialRequestMoreInfo().setRequestMoreInfoOption(
+                    GAJudgeRequestMoreInfoOption.REQUEST_MORE_INFORMATION).setJudgeRequestMoreInfoByDate(LocalDate.now().minusDays(1))
+                .setJudgeRequestMoreInfoText("test"))
                 .isGaApplicantLip(YES)
                 .isGaRespondentOneLip(YES)
                 .parentClaimantIsApplicant(YES)
                 .applicantBilingualLanguagePreference(YES)
                 .build();
-            caseData = caseData.toBuilder().judicialDecision(GAJudicialDecision.builder()
-                                                                 .decision(GAJudgeDecisionOption.REQUEST_MORE_INFO)
-                                                                 .build()).build();
+            caseData = caseData.copy().judicialDecision(new GAJudicialDecision()
+                                                                 .setDecision(GAJudgeDecisionOption.REQUEST_MORE_INFO)
+                                                                 ).build();
             when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
@@ -1173,7 +1170,7 @@ class GeneratePDFDocumentCallbackHandlerTest extends GeneralApplicationBaseCallb
 
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
-            assertThat(handler.camundaActivityId(CallbackParams.builder().build())).isEqualTo("CreatePDFDocument");
+            assertThat(handler.camundaActivityId(new CallbackParams())).isEqualTo("CreatePDFDocument");
         }
     }
 }
